# SwayWifiManager

./: CMakeLists.txt  README.md  run.sh
src/: main.cpp  main.h  utils.h  wifi_scanner.h
src/gui/: gtk.cpp  gtk.h
src/networking/: networking_interface.h
src/networking/nmcli/: nmcli.cpp  nmcli.h
src/utils/: utils.cpp  utils.h
src/wifi_scanner/: wifi_scanner.cpp  wifi_scanner.h
